# ynabify

./: .gitignore  .pre-commit-config.yaml  .ruff_config.toml  LICENSE.txt  README.md  pyproject.toml  static_analysis.ps1  update_hatch_ruff.ps1  update_hooks.ps1
src/ynabify/: __about__.py  exceptions.py  parser_base.py  ynabify.py
src/ynabify/parser/: raiffeisen_csv.py  swisscard_xlsx.py  ynab_xlsx.py
tests/: __init__.py  test_raiffeisen_csv.py  test_swisscard_xlsx.py  test_ynab_xslx.py  test_ynabify.py
tests/data/raiffeisen_csv/: empty_bill.csv  example_bill.csv
tests/data/swisscard_pdf/: example_bill_ynab.csv
tests/data/swisscard_xlsx/: empty_bill.xlsx  example_bill_de.xlsx  example_bill_en.xlsx  example_bill_ynab_main.csv  mapping_example.xlsx  no_booked_transactions.xlsx
tests/data/ynab_xlsx/: empty_bill.xlsx  empty_excel.xlsx  example_bill.xlsx
